:Grafico filtrato per ogenere, pattaforme e "ranked_by" :banana:

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,45 @@
-streamlit
-pandas
-plotly
-numpy
-scikit-learn
-fastapi 
-uvicorn[standard]
-matplotlib
-seaborn
+annotated-doc==0.0.4
+annotated-types==0.7.0
+attrs==25.4.0
+blinker==1.9.0
+cachetools==6.2.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+colorama==0.4.6
+cycler==0.12.1
+fonttools==4.61.0
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+joblib==1.5.2
+kiwisolver==1.4.9
+MarkupSafe==3.0.3
+narwhals==2.13.0
+numpy==2.3.5
+packaging==25.0
+pillow==12.0.0
+plotly==6.5.0
+protobuf==6.33.1
+pyarrow==22.0.0
+pydantic_core==2.41.5
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.30.0
+scipy==1.16.3
+six==1.17.0
+smmap==5.0.2
+tenacity==9.1.2
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+websockets==15.0.1
